--- a/doc/de_DE/faq.asciidoc
+++ b/doc/de_DE/faq.asciidoc
@@ -1,5 +1,5 @@
 [panel,primary]
 .Est-ce que le plugin s'appuie sur des API tiers ?
 --
-Le plugin utilise le bluetooth pour lancer les commandes, Awox Smartplug est cloudless.
+Non le plugin monitore Jeedom en local et uniquement en local.
 --
