--- a/doc/en_US/presentation.asciidoc
+++ b/doc/en_US/presentation.asciidoc
@@ -1,5 +1,3 @@
-=== Awox Smartplug, prises Bluetooth
+=== Jeedom Watcher, superviser Jeedom
 
-Plugin permettant d'utiliser des prises Smartplug Awox.
-
-Les Smartplug sont des prises Bluetooth de la marque Awox. Nul besoin d'autre chose qu'une connexion bluetooth pour commander la prise, y compris via un déporté.
+Plugin permettant de superviser les points critiques pour le bon fonctionnement Jeedom.
