--- a/doc/en_US/presentation.asciidoc
+++ b/doc/en_US/presentation.asciidoc
@@ -1,3 +1,3 @@
 === Jeedom Watcher, monitoring Jeedom
 
-Plugin permettant de superviser les points critiques pour le bon fonctionnement Jeedom.
+Plugin for monitoring critical points for Jeedom operation.
