[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,28 +1,28 @@
 {
     "plugins\/jeemon\/desktop\/php\/jeemon.php": {
-        "Ajouter un équipement": "Ajouter un équipement",
-        "Rechercher": "Rechercher",
-        "Mes Jeedom": "Mes Jeedom",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Nom du Jeedom": "Nom du Jeedom",
-        "Nom de l'équipement jeemon": "Nom de l'équipement jeemon",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
-        "Commentaire": "Commentaire",
-        "Commande Alerte": "Commande Alerte",
-        "Commande Rapport": "Commande Rapport",
-        "Nom": "Nom",
-        "Options": "Options"
+        "Ajouter un équipement": "Gerät hinzufügen",
+        "Rechercher": "Suchen",
+        "Mes Jeedom": "Mein Jeedom",
+        "Sauvegarder": "Speichern",
+        "Supprimer": "Löschen",
+        "Configuration avancée": "Erweiterte Konfiguration",
+        "Equipement": "Gerät",
+        "Commandes": "Befehle",
+        "Nom du Jeedom": "Jeedom Name",
+        "Nom de l'équipement jeemon": "Jeedom ",
+        "Objet parent": "Elternobjekt",
+        "Aucun": "Keine",
+        "Catégorie": "Kategorie",
+        "Activer": "Aktivieren",
+        "Visible": "Sichtbar",
+        "Commentaire": "Kommentar",
+        "Commande Alerte": "Alarm Befehl",
+        "Commande Rapport": "Rapport ",
+        "Nom": "Name",
+        "Options": "Optionen"
     },
     "plugins\/jeemon\/desktop\/js\/jeemon.js": {
-        "Afficher": "Afficher",
+        "Afficher": "Anzeigen",
         "Historiser": "Historiser",
         "Tester": "Tester"
     },
