--- a/doc/de_DE/configuration.asciidoc
+++ b/doc/de_DE/configuration.asciidoc
@@ -1,4 +1,4 @@
-=== Configuration du plugin
+=== Plugin Konfiguration
 
 Il n'y a pas de page de configuration générale ni spécifique, un seul équipement est possible votre Jeedom, il est créer automatiquement.
 
