--- a/doc/de_DE/faq.asciidoc
+++ b/doc/de_DE/faq.asciidoc
@@ -1,5 +1,5 @@
 [panel,primary]
-.Est-ce que le plugin s'appuie sur des API tiers ?
+.Stützt sich das Plugin auf APIs Dritter ?
 --
 Non le plugin monitore Jeedom en local et uniquement en local.
 --
